--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#home">Aktuell</a>
+          <a class="nav-link" href="#news">Aktuell</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about">Über uns</a>
