--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
       </ul>
     </div>
   </nav>
-
-  <div id="app"></div>
+  <div class="app-container">
+    <div id="app"></div>
+  </div>
+    
+  <div class="footer">
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2021 Copyright: Familie Schlüchter
+    </div>
+  </div>
   
 
   <!-- Optional JavaScript -->
