--- a/pages/about.html
+++ b/pages/about.html
@@ -2,21 +2,13 @@
     <div class="content-center">
         <div class="row">
             <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Über uns</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Familie Schlüchter</h6>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Kontakt</h5>
-                        <p> </p>
-                        <p class="card-text">079 355 74 43</p>
-                        <p class="card-text">&#105;&#110;&#102;&#111;&#102;&#097;&#109;&#105;&#108;&#105;&#101;&#115;&#099;&#104;&#108;&#117;&#101;&#099;&#104;&#116;&#101;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</p>
-                    </div>
-                </div>
+                <h1>Über uns</h1>
+                <h5>Familie Schlüchter</h5>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
+                <hr>
+                <h5>Kontakt</h5>
+                <p>079 355 74 43</p>
+                <p>&#105;&#110;&#102;&#111;&#102;&#097;&#109;&#105;&#108;&#105;&#101;&#115;&#099;&#104;&#108;&#117;&#101;&#099;&#104;&#116;&#101;&#114;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</p>
             </div>
             <div class="col">
                 <div class="map-container">
