--- a/pages/bbq.html
+++ b/pages/bbq.html
@@ -1,1 +1,19 @@
-<p>bbq</p>
+<div class="container page-content">
+    <div class="content-center">
+        <div class="row">
+            <div class="col">
+                <h1>Brätlistelle mit Aussicht</h1>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
+                <a class="btn btn-primary" href="#about">Buchung anfragen</a>
+                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1711.8775177658538!2d7.72091007501421!3d47.029806925818015!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNDfCsDAxJzQ3LjMiTiA3wrA0MycxNS44IkU!5e1!3m2!1sde!2sch!4v1615664308865!5m2!1sde!2sch" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <hr>
+        <div class="row">
+            <img src="../images/baume.jpg" class="img-fluid" alt="Responsive image">
+        </div>
+    </div>
+</div>
