--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,7 @@
         <div class="col-12 text-center">
           <h1 class="font-weight-light">Härzlech Wiukomme!</h1>
           <p class="lead">Bi üs im schöne Ämmitau</p>
+          <a href="#about" class="btn btn-outline-dark btn-lg" role="button" aria-pressed="true">Familie Schlüchter</a>
         </div>
       </div>
     </div>
