--- a/pages/partner.html
+++ b/pages/partner.html
@@ -30,6 +30,7 @@
                   <p>Bäckerei und JEMAKO Vertriebspartner</p>
                   <p>&#115;&#101;&#108;&#105;&#115;&#122;&#117;&#101;&#103;&#115;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</p>
                   <a class="btn btn-primary" href="https://www.instagram.com/selis_zuegs/">Instagram</a>
+                  <a class="btn btn-primary" href="https://www.jemako-shop.com/s-schluechter/de/">JEMAKO</a>
                 </div>
         </div>
     </div>
