--- a/pages/home.html
+++ b/pages/home.html
@@ -1,8 +1,8 @@
 <!-- Full Page Image Header with Vertically Centered Content -->
 <header class="masthead">
     <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12 text-center">
+      <div class="row h-100 align-items-center greeting">
+        <div class="col-12 text-center greeting">
           <h1 class="font-weight-light">Härzlech Wiukomme!</h1>
           <p class="lead">Bi üs im schöne Ämmitau</p>
           <a href="#about" class="btn btn-outline-dark btn-lg" role="button" aria-pressed="true">Familie Schlüchter</a>
