--- a/pages/wandern.html
+++ b/pages/wandern.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col">
                 <h5>Wandern</h5>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                <p>Die Region Lützelflüh bietet viele Möglichkeiten für entspannte Wanderungen im Grünen, zum Beispiel von der Schaukäserei Affoltern nach Lüzelflüh. </p>
             </div>
             <div class="col">
                 <div class="map-container wandern">
