--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,16 @@
             <div class="col">
                 <h1>Über uns</h1>
                 <h5>Familie Schlüchter</h5>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet</p>
+                <p>Mein Mann und ich haben im Jahr 2018 geheiratet und im Jahr 2019 den Bauernhof meiner Schwiegereltern übernommen.
+                    Noch im selben Jahr kam unser Sohn Edward auf die Welt und ein Jahr später unsere Tochter Liliana.</p>
+                <p>Mein Mann kümmert sich vier Tage sie Woche liebevoll um unsere 16 Milchkühe, 15 Gusti und 6 Kälber. Drei Mal die Woche arbeitet er auswärts als Storenmoteur, in dieser Zeit kümmert sich sein
+                    Vater Ueli um die Tiere und den Hof.</p>
+                <p>Seine Mutter Elisabeth bewirtschaftet zur Zeit unser Speicherstübli und hilft auch noch tatkräftig auf unserem Hof mit. Dazu bringt sie jeden Samstag an den Märit der Märitfroue Lützelflüh wunderschöne Blumensträusse, Gestecke und süsse Backwaren.</p>
+                <p>Ich selber schaue vor allem zu unseren Kleinen Rabauken, nebenbei backe ich für das Dorflädeli Hiesix in Grünenmatt und auf Bestellung unter &#115;&#101;&#108;&#105;&#115;&#122;&#117;&#101;&#103;&#115;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109; oder auf Facebook und Instagram unter <a href="https://www.instagram.com/selis_zuegs/">@selis_zuegs</a>. Dazu vertreibe ich Putzmittel und diverse Produkte von der Firma Jemako, jetzt auch <a href="https://www.jemako-shop.com/s-schluechter/">online</a> und kümmere mich um den grössten Teil des Büros unserer Geschäfte.</p>
+                <p>Wir träumen davon unseren Familienbetrieb auszubauen, zu optimieren und gut davon leben zu können.
+                    In Planung ist zur Zeit eine eigene Hofbäckerei und ein Stellplatz mit Aussicht auf die Berner Alpen.</p>
+                <p>Schaut öfters mal auf unerer Webseite vorbei damit ihr keine Neuigkeiten verpasst.
+                    Wir freuen uns auf euch.</p>
                 <hr>
                 <h5>Kontakt</h5>
                 <p>079 355 74 43</p>
